JumpScript/tests/baselines/reference/unusedVariablesinModules1.errors.txt
tests/cases/compiler/unusedVariablesinModules1.jump(3,5): error TS6133: 'x' is declared but its value is never read.


==== tests/cases/compiler/unusedVariablesinModules1.jump (1 errors) ====
    export {};
    
    var x: string;
        ~
!!! error TS6133: 'x' is declared but its value is never read.
    
    export var y: string;